@@ -7,6 +7,7 @@ __Version history__
 _Version 1.7.2, April 2018
 
 1. New function 'trajectoryAngles'.
+2. New function 'trajectoryProjection'.
 
 _Version 1.7.1, September 2017
 
